--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.8",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1"
   }
 }
